TG-78: Add color contrast corrections on field errors as per QA comments

--- a/src/Components/Projects/Form/form.module.css
+++ b/src/Components/Projects/Form/form.module.css
@@ -27,8 +27,8 @@
 .tableContainer {
   width: 100%;
   overflow-x: hidden;
-  height: 252px;
-  margin: 26px 0 34px 0;
+  height: 296px;
+  margin: 31px 0 51px 0;
   padding: 0;
 }
 
@@ -42,7 +42,8 @@
 .btnAssign {
   width: 50%;
   height: 44px;
-  margin-top: 25px;
+  margin-top: 31px;
+  align-self: flex-start;
 }
 
 @media (prefers-color-scheme: dark) {
